fixed header menu padding on mobile

--- a/components/menu/menu.module.scss
+++ b/components/menu/menu.module.scss
@@ -34,6 +34,7 @@
   
       width: 32px;
       height: 30px;
+      padding: 0;
       border: 2px solid $secondary;
       background-color: white;
       cursor: pointer;
